<resources>
    <string name="app_name">GithubUserApi</string>

    <string name="lorem">lorem ipsum dolor sit amet.</string>

    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">repository</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="title_main">Daftar User Github</string>
    <string name="search_title">search</string>
    <string name="title_detailuserfragment">Info User</string>
    <string name="title_detail">Detail User</string>
    <string name="title_listfollower">Follower</string>
    <string name="title_listfollowing">Following</string>
    <string name="favorit_title">favorite</string>
    <string name="setting_title">setting</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="title_favorit">List User Favorite</string>
    <string name="setting_reminder_desc">switch on/off reminder</string>
    <string name="time_reminder">Time Reminder</string>
    <string name="title_setting">Setting</string>
    <string name="err_empty">Data not found</string>
</resources>