<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/set_menu_item"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fav_menu_item"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorit_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_menu_item"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>