<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginRight="@dimen/small_padding"
            android:background="@color/white"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/big_padding"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:src="@drawable/ic_undraw_blank_canvas" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/small_padding"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/lorem" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:background="@color/black"
                android:src="@drawable/placeholder_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_padding"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginRight="@dimen/small_padding"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/mid_padding">

                    <TextView
                        android:id="@+id/txt_repo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/repository"
                        android:textAllCaps="true"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/mid_padding">

                    <TextView
                        android:id="@+id/txt_following"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/following"
                        android:textAllCaps="true"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/mid_padding">

                    <TextView
                        android:id="@+id/txt_follower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/follower"
                        android:textAllCaps="true"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_padding"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginRight="@dimen/small_padding"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingTop="@dimen/big_padding"
                android:paddingBottom="@dimen/big_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/mid_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingRight="@dimen/mid_padding"
                    android:paddingBottom="@dimen/small_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/fullname" />

                    <TextView
                        android:id="@+id/txt_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        tools:text="Jake Wharton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginLeft="@dimen/mid_padding"
                    android:layout_marginRight="@dimen/mid_padding"
                    android:background="@color/grey"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/mid_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingRight="@dimen/mid_padding"
                    android:paddingBottom="@dimen/small_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/username" />

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        tools:text="JakeWharton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginLeft="@dimen/mid_padding"
                    android:layout_marginRight="@dimen/mid_padding"
                    android:background="@color/grey"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/mid_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingRight="@dimen/mid_padding"
                    android:paddingBottom="@dimen/small_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/company" />

                    <TextView
                        android:id="@+id/txt_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        tools:text="Google, Inc." />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginLeft="@dimen/mid_padding"
                    android:layout_marginRight="@dimen/mid_padding"
                    android:background="@color/grey"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/mid_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingRight="@dimen/mid_padding"
                    android:paddingBottom="@dimen/small_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/txt_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        tools:text="Pittsburgh, PA, USA" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>